--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 500px;
             height: 240px;
             padding: 30px;
-            margin: 360px auto 480px;
+            margin: 200px auto;
             border: 1px solid #C4C4C4;
             border-radius: 5px;
             background-color: #FFFFFF;
