--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
     <style>
-        @font-face {
-            font-family: 'SpoqaHanSansNeo-Regular';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         *{
-            font-family: 'SpoqaHanSansNeo-Regular';
+            font-family:'SpoqaHanSansNeo', "sans-serif";
         }
 
         article, img, h2, a{
