--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <article class="login-box">
-        <img class="logo-img" src="images/weniv-logo.png" alt="weniv_logo">
+        <img class="logo-img" src="images/weniv-logo.png" alt="위니브">
         <h2 class="login-txt">위니브를 더 즐겁고 편리하게 이용하세요.</h2>
         <a class="login-btn" href="modal.html">
             로그인
