--- a/modal.html
+++ b/modal.html
@@ -17,7 +17,7 @@
 
         <form action="post" class="form-login">
             <p class="txt-login">위니브에서 여러분의 궁금증을 해결하세요! :)</p>
-            <input class="input-id" type="text" placeholder="아이디" required><br>
+            <input class="input-id" type="text" placeholder="아이디" required>
             <input class="input-pw" type="password" placeholder="비밀번호" required>
 
             <div class="remain">
