--- a/modal.html
+++ b/modal.html
@@ -21,12 +21,10 @@
             <input class="input-id" type="text" placeholder="아이디" required>
             <input class="input-pw" type="password" placeholder="비밀번호" required>
 
-            <div class="remain">
-                <img class="img-remain" src="images/check-box.png" alt="로그인상태유지">
-                <p class="txt-remain">로그인 상태 유지</p>
-            </div>
+            <input type="checkbox" id="inpHold" class="inp-hold txt-hide">
+            <label for="inpHold" class="label-hold">로그인 상태 유지</label>
             
-            <button type="submit" class="btn-login">로그인</button>
+            <button type="button" class="btn-login">로그인</button>
 
             <div class="link-help">
                 <a href="#none">회원가입</a>
